# ferris-finder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  fuzzy.rs  main.rs  ucd.rs
