[package]
name = "ferris-finder"
description = "A simple Unicode character finder with fuzzy search"
version = "0.1.1"
license = "MIT"
authors = ["Jenna Fligor <jenna@fligor.net>"]
edition = "2021"
repository = "https://github.com/Ex-32/ferris-finder"

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
tui = "0.18.0"
crossterm = "0.24.0"
fuzzy-matcher = "0.3.7"
dirs = "4.0.0"

[dependencies.reqwest]
version = "0.11.11"
default-features = false
features = ["blocking"]


