[package]
name = "ferris-finder"
description = "A simple Unicode character finder with fuzzy search"
version = "0.2.0"
license = "MIT"
authors = ["Jenna Fligor <jenna@fligor.net>"]
edition = "2021"
repository = "https://github.com/Ex-32/ferris-finder"

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
tui = "0.19.0"
crossterm = "0.26.1"
fuzzy-matcher = "0.3.7"
dirs = "5.0.1"
rayon = "1.7.0"
color-eyre = "0.6.2"

[dependencies.reqwest]
version = "0.11.17"
default-features = false
features = ["blocking"]


